--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a class="nav-link scroll" href="#servicos">Serviços</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link scroll" href="#pqnos">Porque nós</a>
+                <a class="nav-link scroll" href="#pqnos">Vantagens</a>
               </li>
               <li class="nav-item scroll">
                 <a class="nav-link scroll" href="#time">Nosso Time</a>
@@ -276,13 +276,13 @@
     </div>
   </section>
 
-  <!-- porque nos -->
+  <!-- vantagens -->
 
   <section id="pqnos" class="why_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Por que escolher <span>a gente</span>
+          Por que escolher <span>a gente?</span>
         </h2>
       </div>
       <div class="why_container">
@@ -682,7 +682,7 @@
                 Serviços
               </a>
               <a class="" href="why.html">
-                Porque Nós
+                Vantagens
               </a>
               <a class="" href="team.html">
                 Nosso Time
@@ -709,7 +709,7 @@
   <section class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> Pensado e desenvolvido por 
+        &copy; <span id="displayYear"></span> Desenvolvido por 
         <a target="_blank" href="https://www.linkedin.com/in/marcogadelha/">Marco Gadelha</a>
       </p>
     </div>
