--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-  <div class="hero_area">
-    <div class="hero_bg_box">
-      <div class="bg_img_box">
+  <div class="area_textura">
+    <div class="box_area_textura">
+      <div class="img_box_textura">
         <img src="images/hero-bg.png" alt="">
       </div>
     </div>
@@ -43,10 +43,10 @@
                 <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link scroll" href="#about">Sobre</a>
+                <a class="nav-link scroll" href="#servicos">Serviços</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link scroll" href="#servicos">Serviços</a>
+                <a class="nav-link scroll" href="#about">Sobre</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link scroll" href="#pqnos">Vantagens</a>
@@ -61,7 +61,7 @@
       </div>
     </header>
      <!-- carrosel -->
-    <section class="slider_section ">
+    <section class="section_carrosel">
       <div id="customCarousel1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -339,11 +339,6 @@
             </p>
           </div>
         </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          Saiba mais
-        </a>
       </div>
     </div>
   </section>
