--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-md-6">
                   <div class="img-box">
-                    <img src="images/slider-img.png" alt="">
+                    <img src="images/cripto-market.png" alt="">
                   </div>
                 </div>
               </div>
@@ -380,9 +380,6 @@
                 <a href="#">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
-                <a href="#">
-                  <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                </a>
               </div>
             </div>
           </div>
@@ -411,9 +408,6 @@
                 </a>
                 <a href="#">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-youtube-play" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
@@ -444,9 +438,6 @@
                 <a href="#">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                 </a>
-                <a href="#">
-                  <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                </a>
               </div>
             </div>
           </div>
@@ -475,9 +466,6 @@
                 </a>
                 <a href="#">
                   <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-                <a href="#">
-                  <i class="fa fa-youtube-play" aria-hidden="true"></i>
                 </a>
               </div>
             </div>
